@@ -21,8 +21,10 @@
                 <include>fonts/Poppins-Bold.ttf</include>
                 
                 <include>images/FundosTelas/Default.png</include>
+                <include>images/FundosTelas/FundoCadastrarAdmin.png</include>
                 <include>images/FundosTelas/FundoCadastro.png</include>
                 <include>images/FundosTelas/FundoCarrinho.png</include>
+                <include>images/FundosTelas/FundoCrudAdmin.png</include>
                 <include>images/FundosTelas/FundoCursos.png</include>
                 <include>images/FundosTelas/FundoDefault.png</include>
                 <include>images/FundosTelas/FundoLogin.png</include>
@@ -33,14 +35,20 @@
                 <include>images/Botoes/AplicarDesconto.png</include>
                 <include>images/Botoes/AplicarDescontoAzul.png</include>
                 <include>images/Botoes/Cadastrar.png</include>
+                <include>images/Botoes/CadastrarAdmin.png</include>
+                <include>images/Botoes/CadastrarAdmin2.png</include>
                 <include>images/Botoes/CadastrarAzul.png</include>
                 <include>images/Botoes/Cadastrarse.png</include>
                 <include>images/Botoes/CadastrarseAzul.png</include>
                 <include>images/Botoes/CadastrarseSeta.png</include>
+                <include>images/Botoes/Carrinho.png</include>
+                <include>images/Botoes/CarrinhoAzul.png</include>
                 <include>images/Botoes/Conta.png</include>
                 <include>images/Botoes/ContaAzul.png</include>
                 <include>images/Botoes/Cursos.png</include>
                 <include>images/Botoes/CursosAzul.png</include>
+                <include>images/Botoes/EditarAdmin.png</include>
+                <include>images/Botoes/EditarAdmin2.png</include>
                 <include>images/Botoes/EditPerfil.png</include>
                 <include>images/Botoes/EditPerfilSalvar.png</include>
                 <include>images/Botoes/EditSenha.png</include>
@@ -50,19 +58,28 @@
                 <include>images/Botoes/EntrarSeta.png</include>
                 <include>images/Botoes/EsqueciSenha.png</include>
                 <include>images/Botoes/EsqueciSenhaAzul.png</include>
+                <include>images/Botoes/ExcluirAdmin.png</include>
+                <include>images/Botoes/ExcluirAdmin2.png</include>
                 <include>images/Botoes/FazerLogin.png</include>
                 <include>images/Botoes/FazerLoginAzul.png</include>
                 <include>images/Botoes/FinalizarCompra.png</include>
                 <include>images/Botoes/IconSynapseAzul.png</include>
                 <include>images/Botoes/IconSynapsePreto.png</include>
+                <include>images/Botoes/Listar.png</include>
+                <include>images/Botoes/Listar2.png</include>
                 <include>images/Botoes/Login.png</include>
                 <include>images/Botoes/LoginAzul.png</include>
                 <include>images/Botoes/Next.png</include>
                 <include>images/Botoes/Next2.png</include>
                 <include>images/Botoes/Sacola.png</include>
                 <include>images/Botoes/SacolaAzul.png</include>
+                <include>images/Botoes/SalvarAlt.png</include>
+                <include>images/Botoes/SalvarAlt2.png</include>
+                <include>images/Botoes/SacolaAzul.png</include>
                 <include>images/Botoes/SenhaMostrar.png</include>
+                <include>images/Botoes/SenhaMostrarAdmin.png</include>
                 <include>images/Botoes/SenhaOcultar.png</include>
+                <include>images/Botoes/SenhaOcultarAdmin.png</include>
                 <include>images/Botoes/SenhaOcultarNull.png</include>
                 <include>images/Botoes/Seta.png</include>
                 <include>images/Botoes/SetaCursos.png</include>
@@ -70,9 +87,13 @@
                 <include>images/Botoes/Sobre.png</include>
                 <include>images/Botoes/SobreAzul.png</include>
                 <include>images/Botoes/X.png</include>
+                <include>images/Botoes/XAdmin.png</include>
+                <include>images/Botoes/XAdmin2.png</include>
                 <include>images/Botoes/XAzul.png</include>
                 <include>images/Botoes/XCompra.png</include>
                 <include>images/Botoes/XCompraAzul.png</include>
+                <include>images/Botoes/XCompraJanela.png</include>
+                <include>images/Botoes/XCompraJanelaAzul.png</include>
                 <include>images/Botoes/XFecharTelas.png</include>
                 <include>images/Botoes/XFecharTelasVerm.png</include>
 
@@ -80,6 +101,7 @@
                 <include>images/Formas/BarraSup.png</include>
                 <include>images/Formas/BotaoCurso.png</include>
                 <include>images/Formas/defaultfoto.png</include>
+                <include>images/Formas/defaultfotoJanela.png</include>
                 <include>images/Formas/DesenhoComputador.png</include>
                 <include>images/Formas/EditarPerfil.png</include>
                 <include>images/Formas/Field.png</include>
@@ -100,10 +122,26 @@
                 <include>images/TelasCompletas/Menu.png</include>
                 <include>images/TelasCompletas/Perfil.png</include>
                 <include>images/TelasCompletas/Sobre.png</include>
+                <include>images/TelasCompletas/PageAdminCadastro.png</include>
+                <include>images/TelasCompletas/PageAdminListar.png</include>
                 
+                <include>images/TelasCompletas/Janelas.png</include>
+
             </includes>
         </resource>
     </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
 </build>
 
 <dependencies>
